initial styling for search views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,5 +3,17 @@
 @import "base/base";
 @import "neat";
 
+@import "gifs";
+@import "search";
+
+body {
+  background-color: #41A8Df;
+  margin-top: 30px;
+}
+
 .outer-container { @include outer-container;  }
+
+.button {
+  @extend %button;
+}
 
