--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,10 @@ body {
   @extend %button;
 }
 
+%base-container {
+  background-color: white;
+  border-radius: 5px;
+  padding: 15px;
+  box-shadow: 0 0 3em gray;
+}
+
