--- a/app/views/gifs/index.html.slim
+++ b/app/views/gifs/index.html.slim
@@ -1,3 +1,5 @@
-.index-container
-  h1 All Gifs
+.gif-container
+  h1 All the Gifs!
   = render 'iterative_display'
+  br
+  p = link_to "Return to Search", root_path, class: 'button'
