--- a/app/views/search/search.html.slim
+++ b/app/views/search/search.html.slim
@@ -1,6 +1,6 @@
 .search-display
   - if @gifs.first
-    p = link_to "Return to Search", root_path, class: 'button'
+    h1 Tagged with: #{ @search_params.to_sentence }
     = render 'gifs/iterative_display'
   - else
     p Sorry, we couldn't find any gifs tagged with #{@search_params.to_sentence}.
