--- a/app/views/gifs/_iterative_display.html.slim
+++ b/app/views/gifs/_iterative_display.html.slim
@@ -1,6 +1,8 @@
 - @gifs.each do |gif|
   p
-    h2 => link_to gif.title, gif_path(gif)
+    h2 => link_to gif.title, gif_path(gif), data: { id: gif.id }
     | Tags: 
     = format_tag_list_as_links(gif.tags).to_sentence.html_safe
+    .gif-preview
+      = image_tag gif.url, id: gif.id
 
