--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 // Vendor styles
-/*@import "bourbon";*/
-/*@import "base/base";*/
-/*@import "neat";*/
+@import "bourbon";
+@import "base/base";
+@import "neat";
 
 @import "bootstrap";
 
