Stylesheet tweaks, WIP

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,11 +2,10 @@
 @import "bourbon";
 @import "base/base";
 @import "neat";
-
+// Application styles
 @import "layout";
 @import "gifs";
 @import "search";
 
 @import "selectize";
 @import "selectize.default"
-
