--- a/app/views/gifs/_gifs.html.slim
+++ b/app/views/gifs/_gifs.html.slim
@@ -2,6 +2,6 @@ p
   h2 => link_to gif.title, gif, data: { id: gif.id }
   | Tags: 
   = format_tag_list_as_links(gif.tags).to_sentence.html_safe
-  .gif-preview
+  .gif-preview data-preview-id=gif.id
     = image_tag gif.url, id: gif.id
 
