--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -1,24 +1,14 @@
-// Bitters v0.10.0
+// Bitters 1.6.0
 // http://bitters.bourbon.io
+// Copyright 2013-2017 thoughtbot, inc.
+// MIT License
 
-// Variables
-@import 'variables';
+@import "variables";
 
-// Neat Settings -- uncomment if using Neat -- must be imported before Neat
-@import 'grid-settings';
-
-// Mixins
-@import 'mixins/flash';
-
-// Extends
-@import 'extends/button';
-@import 'extends/clearfix';
-@import 'extends/hide-text';
-
-// Typography and Elements
-@import 'typography';
-@import 'forms';
-@import 'tables';
-@import 'lists';
-@import 'flashes';
-@import 'buttons';
+@import "buttons";
+@import "forms";
+@import "layout";
+@import "lists";
+@import "media";
+@import "tables";
+@import "typography";
